<resources>
    <string name="app_name">DEN</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="bienvenido">"          En esta aplicación móvil puedes presentar tus denuncias de criaderos de mosquitos de manera cívica y responsable."</string>
    <string name="reporte">"          Pon tus denuncias, reportes y sugerencias que conlleve a la erradicación del dengue con DEN. "</string>
    <string name="nueva_denuncia">"Nueva Denuncia"</string>
    <string name="seguiminto_denuncia">"Seguiminto de Denuncia"</string>
    <string name="ver_historia">"Historial"</string>
    <string name="politica_privacidad">"Politica de Privacidad"</string>
    <string name="title_activity_nav">Nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="p1">Esta política de privacidad rige el uso de la aplicación de software DEN para dispositivos móviles Android que fue creada por ___.</string>
    <string name="p2">¿Qué tipo de datos recolectamos y para que los utilizamos?</string>
    <string name="p3">Para el correcto funcionamiento de las aplicaciones que construimos o desarrollamos, estos son algunos de los datos que recolectamos:</string>
    <string name="p4">Ubicación</string>
    <string name="p5">Para el caso de las aplicaciones que sea necesario accedemos a los datos proporcionados por el GPS. Estos datos no los manejamos nosotros, son directamente manejado por Google Maps (nuestro proveedor de mapas).</string>
    <string name="p6">Usuario</string>
    <string name="p7">Sirve para que los administradores de la aplicación te puedan identificar de mejor manera.</string>
    <string name="p8">Correo electrónico</string>
    <string name="p9">Solicitado para registrarse como usuario y como método de recuperación de contraseña si la misma ha sido olvidada por el usuario.</string>
    <string name="p10">Tus datos personales no son vendidos a terceros. Cuando realizamos estadísticas sobre el uso de la aplicación, estas no obtienen tus datos personales ni otra información adicional a los fines de la medición que permita identificarte individualmente (por ejemplo, mediremos los sectores que registran mas denuncias realizadas, pero no utilizaremos tu nombre).</string>
    <string name="p11">Tus datos personales solo son guardados mientras desees mantener tu cuenta con nosotros. Si lo solicitas, serán eliminados junto con esta.</string>
    <string name="p12">Cookies</string>
    <string name="p13">Las cookies son archivos con una pequeña cantidad de datos que se usan comúnmente como identificadores únicos anónimos. Estos se envían a su navegador desde los sitios web que visita y se almacenan en la memoria interna de su dispositivo.</string>
    <string name="p14">Este servicio no utiliza estas «cookies» explícitamente. Sin embargo, la aplicación puede usar código de terceros y bibliotecas que usan «cookies» para recopilar información y mejorar sus servicios. Tiene la opción de aceptar o rechazar estas cookies y saber cuándo se envía una cookie a su dispositivo. Si elige rechazar nuestras cookies, es posible que no pueda usar algunas partes de este Servicio.</string>
    <string name="p15">Proveedores de servicio</string>
    <string name="p16">Puedo emplear a empresas e individuos de terceros debido a las siguientes razones:</string>
    <string name="p17">Para facilitar nuestro servicio;</string>
    <string name="p18">Para proporcionar el Servicio en nuestro nombre;</string>
    <string name="p19">Para realizar servicios relacionados con el Servicio; o</string>
    <string name="p20">Para ayudarnos a analizar cómo se utiliza nuestro Servicio.</string>
    <string name="p21">Deseo informar a los usuarios de este Servicio que estos terceros tienen acceso a su Información personal. La razón es realizar las tareas que se les asignaron en nuestro nombre. Sin embargo, están obligados a no divulgar ni utilizar la información para ningún otro propósito.</string>
    <string name="p22">Seguridad</string>
    <string name="p23">Valoro su confianza en proporcionarnos su información, por lo tanto, nos esforzamos por utilizar medios comercialmente aceptables para protegerla. Pero recuerde que ningún método de transmisión por Internet o método de almacenamiento electrónico es 100% seguro y confiable, y no puedo garantizar su seguridad absoluta.</string>
    <string name="p24">Enlaces a otros sitios</string>
    <string name="p25">Este servicio puede contener enlaces a otros sitios. Si hace clic en un enlace de un tercero, será dirigido a ese sitio. Tenga en cuenta que estos sitios externos no son operados por mí. Por lo tanto, le recomiendo que revise la Política de privacidad de estos sitios web. No tengo control ni asumo ninguna responsabilidad por el contenido, las políticas de privacidad o las prácticas de sitios o servicios de terceros.</string>
    <string name="p26">Privacidad de los niños</string>
    <string name="p27">Estos Servicios no se dirigen a ninguna persona menor de 13 años. No recopilo a sabiendas información de identificación personal de niños menores de 13 años. En el caso de que descubra que un niño menor de 13 años me ha proporcionado información personal, la borro inmediatamente de nuestros servidores. Si usted es padre o tutor y sabe que su hijo nos ha proporcionado información personal, comuníquese conmigo para que pueda realizar las acciones necesarias.</string>
    <string name="p28">¿Qué hacemos con los datos que recolectamos?</string>
    <string name="p29">Los datos recolectados son de dos tipos:</string>
    <string name="p30">Datos recolectados por nosotros.</string>
    <string name="p31">Datos recolectados por terceros.</string>
    <string name="p32">Datos recolectados por nosotros</string>
    <string name="p33">Estos datos se recolectan para obtener un feedback de que es lo que quieren nuestros usuarios y así poder mejorar brindando las correctas mejoras en cada actualización.</string>
    <string name="p34">Los datos son manipulados a nivel de código, luego procesados en grandes cantidades y de usó para prevención, pero en ningún momento accedemos a datos de un usuario en particular, pues están encriptados y solo el usuario dueño de la información puede acceder a ellos.</string>
    <string name="p35">Datos recolectados por terceros</string>
    <string name="p36">En los datos recolectados por terceros están:</string>
    <string name="p37">Google Play</string>
    <string name="p38">Google Analytics</string>
    <string name="p39">Puedes dar click a cada uno de los elementos de la lista para acceder a sus políticas de datos.</string>
    <string name="menu_home">Home</string>
    <string name="terminos">Los presentes Términos y Condiciones rigen la utilización del software o aplicación “DEN”..</string>
    <string name="t1">Al marcar la casilla de confirmación declaras haber leído y aceptar los presentes Términos y Condiciones, así como el tratamiento de datos personales que realiza DEN y que se encuentra contenido en nuestra Política de Privacidad.</string>
    <string name="t2">El software DEN es propiedad intelectual propietaria y exclusiva de____. La modificación, traducción, adaptación, edición, o cualquier acto de ingeniería inversa, desensamblado o descompilación de su código se encuentra prohibido sin la autorización expresa de ______.
</string>
    <string name="t3"> Condiciones de uso</string>
    <string name="t4">DEN es un servicio gratuito para individuos. La violación a estos Términos y Condiciones o a nuestra Política de Privacidad será causal suficiente para poner término permanente a la utilización de nuestros servicios. El uso no autorizado de la propiedad intelectual o de la marca de _______constituirá también una infracción suficiente para poner término a la utilización de nuestros servicios.
Al aceptar el presente acuerdo reconoces que DEN constituye una aplicación móvil donde su contenido es aportado tanto por los usuarios que la componen. El contenido de los reportes en la aplicación son exclusiva responsabilidad de quienes los emiten.
Cualquier modificación de estos Términos y Condiciones, o de la Política de Privacidad que rige el tratamiento de datos de _______, regirá desde su publicación en nuestro sitio web. Cuando dichas modificaciones impacten de manera significativa en el tratamiento de los datos personales que realiza ______ o el funcionamiento de la aplicación esta será previamente notificada al correo que utilizaste para registrarte con nosotros o por medio de la interfaz de la aplicación.
</string>
    <string name="t5">Descripción del servicio y uso autorizado</string>
    <string name="t7"> Prohibiciones</string>
    <string name="t8">DEN prohíbe el uso de los servicios con fines ilícitos o inmorales. Se prohíbe especialmente:</string>
    <string name="t9">La publicación o difusión que contenga o divulgue cualquier información de identificación personal o información privada de cualquier persona sin su consentimiento. Cualquier publicación que incluya datos personales de menores de edad requiere el consentimiento expreso de sus padres, curador legal o equivalente.
</string>
    <string name="t10">La utilización de la plataforma para fines difamatorios, de calumnia o que constituyan actitudes amenazantes o de acoso.
</string>
    <string name="t11">La publicación o propagación de contenido que incite a la violencia, a la discriminación o la alteración del orden.
</string>
    <string name="t12">Acceder, monitorear, copiar y almacenar por cualquier medio los datos compartidos en DEN sin autorización expresa de _____.
</string>
    <string name="t13">Realizar cualquier acción que imponga o pueda imponer una carga desproporcionada a la infraestructura tecnológica o humana de _____.
</string>
    <string name="t14">Utilizar la aplicación con fines perjudiciales o que afecten la usabilidad de los demás usuarios.
</string>
    <string name="t15">Limitación de seguridad</string>
    <string name="t16">Los Servicios y la aplicación pueden contener enlaces a sitios web de terceros o recursos. Proporcionamos estos vínculos solamente para tu conveniencia y DEN no es responsable de los contenidos, productos o servicios en, o disponibles en dichos sitios o recursos o enlaces que aparecen en dichos sitios. Usted reconoce la responsabilidad exclusiva y asume todos los riesgos que surjan de su uso de cualquier sitio web o recursos de terceros.</string>
    <string name="t17">Vigencia de los términos y condiciones</string>
    <string name="t18">Los presentes Términos y Condiciones entraron en vigencia ……………... Te informaremos cada vez que estos Términos y Condiciones sufran una modificación esencial que produzca cambios relevantes en la prestación del servicio o el tratamiento de tus datos personales.
</string>
</resources>