<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Termino"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#FF0000"
        android:gravity="center"
        android:text="TERMINOS Y CONDICIONES"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/terminos"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="398dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/t1"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <TextView
                android:layout_width="398dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/t2"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/t3"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="398dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/t4"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/t7"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="398dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/t8"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <TextView
                android:layout_width="398dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/t9"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <TextView
                android:layout_width="398dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/t10"
                android:textColor="@color/black"
                android:textSize="12dp" />
            <TextView
                android:layout_width="398dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/t11"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textSize="12dp" />
            <TextView
                android:layout_width="398dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/t12"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textSize="12dp" />
            <TextView
                android:layout_width="398dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/t13"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textSize="12dp" />
            <TextView
                android:layout_width="398dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/t14"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textSize="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/t15"
                android:textColor="@color/black"
                android:textSize="13dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="398dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:text="@string/t16"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/t17"
                android:textColor="@color/black"
                android:textSize="13dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="398dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/t18"
                android:textColor="@color/black"
                android:textSize="12dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>