<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Politica"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#FF0000"
        android:gravity="center"
        android:text="POLÍTICA DE PRIVACIDAD"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="1.    Información que se obtiene la aplicación y su utilización"
           />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="          a)	Usuario proporcionó información"/>
        <TextView
            android:layout_width="398dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/p1"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="12dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="          b)	Protección de datos personales" />

        <TextView
            android:layout_width="398dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/p2"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="12dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="          c)	Información recopilada automáticamente" />
        <TextView
            android:layout_width="398dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/p3"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="12dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="¿La aplicación recopila información de ubicación precisa en tiempo real del dispositivo?" />
        <TextView
            android:layout_width="398dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/p4"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="12dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="¿Los terceros pueden ver y/o tener acceso a la información obtenida por la aplicación?"/>

        <TextView
            android:layout_width="398dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/p5"
            android:textColor="@color/black"
            android:textSize="12dp" />
        <TextView
            android:layout_width="398dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/p6"
            android:textColor="@color/black"
            android:textSize="12dp" />
        <TextView
            android:layout_width="398dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/p7"
            android:textColor="@color/black"
            android:textSize="12dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="Política de Retención de Datos, Gestión de la Información"/>

        <TextView
            android:layout_width="398dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/p8"
            android:textColor="@color/black"
            android:textSize="12dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="Seguridad"/>
        <TextView
            android:layout_width="398dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/p9"
            android:textColor="@color/black"
            android:textSize="12dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="Su consentimiento"/>
        <TextView
            android:layout_width="398dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/p10"
            android:textColor="@color/black"
            android:textSize="12dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="Modificación"/>
        <TextView
            android:layout_width="398dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/p11"
            android:textColor="@color/black"
            android:textSize="12dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="Contáctenos"/>
        <TextView
            android:layout_width="398dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/p12"
            android:textColor="@color/black"
            android:textSize="12dp" />
    </LinearLayout>
    </ScrollView>
    </LinearLayout>